# picoX21H

./: CMakeLists.txt  Doxyfile  Makefile  README.md
Source/: CMakeLists.txt  FilePortal.h  InOut.cpp  PioI2S_S16.h  PioYMDAC.h  SynthIO.h  YM2151.h  audio.cpp  picoX21H.cpp  picox21h.cpp
Source/DX21/: AUTO.py  BBD.h  CMakeLists.txt  DX21Audio.h  DX21Synth.h  IIRFilter.h  SysEx.cpp  SysEx.h  Table_bbd_filter.py  Table_dx21_rom.py  Table_iG10090_sine.py  YM2151.h  YM2151_Interface.h  YM2151_Model.h  iG10090.h
Source/DX21/rom/: LICENSE  Makefile  dx21_rom_v1_4.asm  dx21_rom_v1_4.asm_  dx21_rom_v1_5.asm  mc6803_mac.asm
Source/DX21/test/: CMakeLists.txt  testBBD.cpp  testIIRFilter.cpp  testiG10090.cpp
Source/chip/: CMakeLists.txt
Source/hw/: CMakeLists.txt  Config.h  Lcd.h  MidiIn.h  MidiUsbDevice.h  hw.h
docs/Schematic/: picoX21H.kicad_sch
